--- a/src/assets/css/main.styl
+++ b/src/assets/css/main.styl
@@ -169,13 +169,13 @@
   padding: 15px;
   overflow: hidden;
 
-  .junbo-logo {
+  .yunyi-logo {
     position: absolute;
     top: 8%;
     left: 100px;
   }
 
-  .junbo-value {
+  .yunyi-value {
     position: absolute;
     top: 8%;
     right: 100px;
